@@ -1,2 +1,6 @@
 # Graphic-Design-App
 A application used to create graphics using Java and JavaFX
+
+To use javaFX, set build path:
+
+Mac: --module-path /Users/jessanilinsangan/Desktop/myIT-work/javafx-sdk-17.0.2/lib --add-modules=javafx.controls,javafx.fxml,javafx.graphics
